[RuneCastStateMachine]: Add native support for conditional combos WIP
Increased number of cast state machine per rune from 1 to n
Introduced the concept of RuneTask to add a return value to cast state machine execution
Created simple game layer to allow testing

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,3 +1,8 @@
 
+
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=96A08CFE4FC055C58B6CF28A3955AD4D
+
+[/Script/RuneSystemSandbox.InputBindingsDeveloperSettings]
+namedInputActions=(("HorizontalAxis", (inputAction="/Script/EnhancedInput.InputAction'/Game/Input/BP_XAxis.BP_XAxis'")),("VerticalAxis", (inputAction="/Script/EnhancedInput.InputAction'/Game/Input/BP_YAxis.BP_YAxis'")))
+
