--- a/RuneSystemSandbox.uproject
+++ b/RuneSystemSandbox.uproject
@@ -7,7 +7,11 @@
 		{
 			"Name": "RuneSystemSandbox",
 			"Type": "Runtime",
-			"LoadingPhase": "Default"
+			"LoadingPhase": "Default",
+			"AdditionalDependencies": [
+				"DeveloperSettings",
+				"Engine"
+			]
 		}
 	],
 	"Plugins": [
